--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/side-nav/side-nav.component.scss
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/side-nav/side-nav.component.scss
@@ -1,5 +1,8 @@
 .nav-items {
     padding-top: 40px;
+    .bg-gray{
+      background-color: rgb(1, 51, 91) !important;
+    }
     .nav-item {
       padding: 25px 50px;
       cursor: pointer;
