--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/profile/profile.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/profile/profile.component.html
@@ -1,1 +1,7 @@
-<p>profile works!</p>
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">Username: {{username}}</h5>
+        <p class="card-text">Firstname and Lastname: {{name}}</p>
+        <p class="card-text">Email: .....</p>
+    </div>
+</div>
