--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/side-nav/side-nav.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/side-nav/side-nav.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="nav-item" routerLink="/dashboard/shop">
     <fa-icon [icon]="faShop"></fa-icon>
-    <span>Shops</span>
+    <span>Shop</span>
   </div>
 
   <div class="nav-item bg-gray" (click)="logout()">
