--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/main-dashboard/main-dashboard.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/main-dashboard/main-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="chart-main-container">
+<div id="container" class="chart-main-container">
     <div class="widget-container">
         <div class="widget green">
             <div class="icon">
