--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/order-confirmation/order-confirmation.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/order-confirmation/order-confirmation.component.html
@@ -7,5 +7,5 @@
     <p>Your <strong>{{ orderData?.totalAmount }} €</strong> order is confirmed!</p>
     <br>
     <p>please allow 1-3 business day(s) for shipping. </p>
-    <button class="btn btn-primary d-flex flex-column mb-3" routerLink="/product-list">Back to product list</button>
+    <button class="btn btn-primary d-flex flex-column mb-3" routerLink="/dashboard/shop/product-list">Back to product list</button>
 </div>
