--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/product-details/product-details.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/product-details/product-details.component.html
@@ -17,7 +17,7 @@
                 </select>
                 <div>
                     <button class="btn btn-primary d-flex flex-column" (click)="addToCart(product)">Add to cart</button>
-                    <a class="btn" routerLink="/product-list"> <-Back to product list</a>
+                    <a class="btn" routerLink="/dashboard/shop/product-list"> <-Back to product list</a>
                 </div>
             </div>
         </div>
