--- a/ethermancer-website/src/app/components/faq/faq.component.scss
+++ b/ethermancer-website/src/app/components/faq/faq.component.scss
@@ -8,7 +8,7 @@ $faq-item-border: 1px solid #ccc;
   flex-direction: column;
   padding: 30px;
   width: 100%;
-  background-image: url('/assets/img/expert-bg.jpg');
+  background-image: url('../../../assets/img/expert-bg.jpg');
   background-attachment: local;
   background-position: top center;
   background-repeat: no-repeat;
