--- a/ethermancer-website/src/app/components/team/team.component.html
+++ b/ethermancer-website/src/app/components/team/team.component.html
@@ -3,7 +3,7 @@
     <section class="team-members">
         <section class="card">
             <div class="bg-image hover-overlay" mdbRipple rippleColor="light">
-                <img src="/assets/img/personnel-1-600x385.jpg" class="img-fluid" />
+                <img src="./assets/img/personnel-1-600x385.jpg" class="img-fluid" />
                 <a href="#!">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -15,7 +15,7 @@
         </section>
         <section class="card">
             <div class="bg-image hover-overlay" mdbRipple rippleColor="light">
-                <img src="/assets/img/personnel-2-600x385.jpg" class="img-fluid" />
+                <img src="./assets/img/personnel-2-600x385.jpg" class="img-fluid" />
                 <a href="#!">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -27,7 +27,7 @@
         </section>
         <section class="card">
             <div class="bg-image hover-overlay" mdbRipple rippleColor="light">
-                <img src="/assets/img/personnel-3-600x385.jpg" class="img-fluid" />
+                <img src="./assets/img/personnel-3-600x385.jpg" class="img-fluid" />
                 <a href="#!">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -39,7 +39,7 @@
         </section>
         <section class="card">
             <div class="bg-image hover-overlay" mdbRipple rippleColor="light">
-                <img src="/assets/img/personnel-4-600x385.jpg" class="img-fluid" />
+                <img src="./assets/img/personnel-4-600x385.jpg" class="img-fluid" />
                 <a href="#!">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
