--- a/ethermancer-website/src/app/components/testimonials/testimonials.component.scss
+++ b/ethermancer-website/src/app/components/testimonials/testimonials.component.scss
@@ -6,8 +6,8 @@ $subtitle-color: #ccc;
 $text-color: #eee;
 
 .testimonials-container {
-  background: url('/assets/img/bg-portfolio.jpg') top center no-repeat,
-              $main-bg-overlay;
+  background: url('../../../assets/img/bg-portfolio.jpg') top center no-repeat,
+    $main-bg-overlay;
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -15,37 +15,38 @@ $text-color: #eee;
   align-items: center;
   padding: 30px;
   width: 100%;
-  
+
   h1 {
     color: $card-color;
   }
-  
+
   .card {
     margin: 12px;
     background-color: transparent;
-    
+
     &-in-carousel {
       .card-body {
         color: $card-color;
-        
-        .card-title, .card-text {
+
+        .card-title,
+        .card-text {
           color: $card-color;
         }
-        
+
         .card-subtitle {
           color: $subtitle-color;
         }
       }
-      
+
       width: 18rem;
       margin: 0 1rem;
     }
   }
-  
+
   mdb-carousel-item {
     padding-bottom: 60px;
   }
-  
+
   .card-container {
     justify-content: space-around;
   }
