--- a/ethermancer-website/src/app/components/walkthrough/walkthrough.component.scss
+++ b/ethermancer-website/src/app/components/walkthrough/walkthrough.component.scss
@@ -10,7 +10,7 @@ $padding-size: 30px;
     flex-direction: column;
     padding: $padding-size;
     width: 100%;
-    background-image: url('/assets/img/banner-bg.jpg');
+    background-image: url('../../../assets/img/banner-bg.jpg');
     background-attachment: local;
     background-position: top center;
     background-repeat: no-repeat;
