--- a/ethermancer-website/src/app/components/key-features/key-features.component.html
+++ b/ethermancer-website/src/app/components/key-features/key-features.component.html
@@ -7,7 +7,7 @@
             <div class=" pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
-                        <img src="/assets/img/features-1.png" class="img-fluid rounded-start" alt="..." />
+                        <img src="./assets/img/features-1.png" class="img-fluid rounded-start" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body pt-0">
@@ -24,7 +24,7 @@
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
-                        <img src="/assets/img/features-2.png" class="img-fluid rounded-start" alt="..." />
+                        <img src="./assets/img/features-2.png" class="img-fluid rounded-start" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body pt-0">
@@ -41,7 +41,7 @@
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
-                        <img src="/assets/img/features-3.png" class="img-fluid rounded-start" alt="..." />
+                        <img src="./assets/img/features-3.png" class="img-fluid rounded-start" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body pt-0">
@@ -58,7 +58,7 @@
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
-                        <img src="/assets/img/features-4.png" class="img-fluid rounded-start" alt="..." />
+                        <img src="./assets/img/features-4.png" class="img-fluid rounded-start" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body pt-0">
@@ -74,7 +74,7 @@
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
-                        <img src="/assets/img/features-5.png" class="img-fluid rounded-start" alt="..." />
+                        <img src="./assets/img/features-5.png" class="img-fluid rounded-start" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body pt-0">
@@ -91,7 +91,7 @@
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
-                        <img src="/assets/img/features-6.png" class="img-fluid rounded-start" alt="..." />
+                        <img src="./assets/img/features-6.png" class="img-fluid rounded-start" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body pt-0">
@@ -108,7 +108,7 @@
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
-                        <img src="/assets/img/features-7.png" class="img-fluid rounded-start" alt="..." />
+                        <img src="./assets/img/features-7.png" class="img-fluid rounded-start" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body pt-0">
@@ -125,7 +125,7 @@
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
-                        <img src="/assets/img/features-8.png" class="img-fluid rounded-start" alt="..." />
+                        <img src="./assets/img/features-8.png" class="img-fluid rounded-start" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body pt-0">
