--- a/ethermancer-website/src/app/components/key-features/key-features.component.scss
+++ b/ethermancer-website/src/app/components/key-features/key-features.component.scss
@@ -11,7 +11,7 @@ $background-blue: rgb(1, 1, 155);
     width: 100%;
 
     background: {
-        image: url('/assets/img/half-service-bg.jpg');
+        image: url('../../../assets/img/half-service-bg.jpg');
         attachment: local;
         position: center;
         repeat: no-repeat;
