--- a/ethermancer-website/src/app/components/main-content/main-content.component.scss
+++ b/ethermancer-website/src/app/components/main-content/main-content.component.scss
@@ -9,7 +9,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/assets/img/hero-bg-1.jpg');
+    background-image: url('../../../assets/img/hero-bg-1.jpg');
+
     background-size: cover;
     background-position: center;
     transform: translate3d(0, 0, 0);
