--- a/ethermancer-website/src/app/components/roadmap/roadmap.component.scss
+++ b/ethermancer-website/src/app/components/roadmap/roadmap.component.scss
@@ -15,7 +15,7 @@ $text-color-light: azure;
     padding-right: 30px;
     padding-left: 30px;
     width: 100%;
-    background-image: url('/assets/img/timeline-bg.jpg');
+    background-image: url('../../../assets/img/timeline-bg.jpg');
     background-attachment: local;
     background-position: top center;
     background-repeat: no-repeat;
