--- a/ethermancer-website/src/app/components/whitepaper/whitepaper.component.scss
+++ b/ethermancer-website/src/app/components/whitepaper/whitepaper.component.scss
@@ -6,11 +6,11 @@ $padding-size: 30px;
 .whitepaper-container {
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     flex-direction: row;
     padding: $padding-size;
     width: 100%;
-    background-image: url('/assets/img/bg-whitepaper.jpg');
+    background-image: url('../../../assets/img/bg-whitepaper.jpg');
     background-attachment: local;
     background-position: top center;
     background-repeat: no-repeat;
