--- a/ethermancer-website/src/app/components/why-us/why-us.component.scss
+++ b/ethermancer-website/src/app/components/why-us/why-us.component.scss
@@ -10,7 +10,7 @@ $padding-size: 30px;
     padding-right: $padding-size;
     padding-left: $padding-size;
     width: 100%;
-    background-image: url('/assets/img/half-about-bg.jpg');
+    background-image: url('../../../assets/img/half-about-bg.jpg');
     background-attachment: local;
     background-position: top center;
     background-repeat: no-repeat;
