--- a/ethermancer-website/src/app/components/header/header.component.html
+++ b/ethermancer-website/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header [ngClass]="{'transparent-bg': shouldApplyTransparentBg}">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid d-flex justify-content-between">
-            <a class="navbar-brand text-light" href="#">EtherMancer</a>
+            <a class="navbar-brand text-light" href="#">EtherMancer61</a>
             <button *ngIf="!isMainMenuOpen" (click)="toggleMainMenu()" class="navbar-toggler menu-open" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
                 aria-expanded="false" aria-label="Toggle navigation">
