--- a/ethermancer-website/src/app/components/header/header.component.html
+++ b/ethermancer-website/src/app/components/header/header.component.html
@@ -21,7 +21,7 @@
                     <!-- About us -->
                     <li class="nav-item dropdown" (click)="toggleMenu('about'); trackClickEvent('Menu', 'About') ; $event.preventDefault()">
                         <a class="nav-link dropdown-toggle active text-light" href="#" id="aboutDropdown" role="button">
-                            About ussss
+                            About us
                         </a>
                         <ul *ngIf="isMenuOpen['about']" class="dropdown-menu">
                             <li><a class="dropdown-item" href="#"
