--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/dashboard-header/dashboard-header.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/dashboard-header/dashboard-header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="logo" routerLink="/dashboard/mainDashboard">EtherMancer61</div>
+  <div class="logo" routerLink="/dashboard/mainDashboard">EtherMancer</div>
   <div class="user" routerLink="/dashboard/profile">
     <div class="user-name">{{ username }}</div>
     <div class="user-icon">
