--- a/ethermancer-website/src/app/components/about-ethermancer/about-ethermancer.component.html
+++ b/ethermancer-website/src/app/components/about-ethermancer/about-ethermancer.component.html
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-dark">Ethermancer is on Alpha-Phase</h5>
                     <p class="card-text text-dark">Beta starts soon</p>
-                    <a routerLink="/to-ethermancer" class="btn btn-primary" target="_blank">Join Ethermancer now</a>
+                    <a href="http://ethermancer-dashboard.s3-website-us-east-1.amazonaws.com" class="btn btn-primary" target="_blank">Join Ethermancer now</a>
                     <br />
                     <br />
                     <div *ngIf="isLoading" class="d-flex justify-content-center">
