--- a/ethermancer-website/src/app/components/header/header.component.html
+++ b/ethermancer-website/src/app/components/header/header.component.html
@@ -83,7 +83,7 @@
                 </ul>
                 <ul class="navbar-nav d-none d-lg-block">
                     <li class="nav-item">
-                        <a class="nav-link btn btn-yellow text-dark" routerLink="/to-ethermancer" target="_blank">To
+                        <a class="nav-link btn btn-yellow text-dark" href="http://ethermancer-dashboard.s3-website-us-east-1.amazonaws.com" target="_blank">To
                             Ethermancer</a>
                     </li>
                 </ul>
