--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/login/login.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
     <div class="title">
       <h1>Login</h1>
       <p>Please log in to use the Ethermancer trading bot</p>
-      <p>Demo Account: Username: bilgin, Password: test123</p>
+      <p>Demo Account: Username: test1, Password: test1</p>
     </div>
 
 
